# mirakl

./: .gitignore  Cargo.toml
mirakl/: Cargo.toml
mirakl/src/: client.rs  helpers.rs  lib.rs  result.rs  types.rs
mirakl/src/impl/: bestbuy.rs  catch_com_au.rs  mod.rs
mirakl/src/offer/: mod.rs  types.rs
mirakl/src/order/: mod.rs  types.rs
mirakl/src/order/document/: mod.rs  types.rs
mirakl/src/platform_settings/: mod.rs  types.rs
mirakl_cli/: Cargo.toml
mirakl_cli/src/: helpers.rs  main.rs
