[package]
name = "mirakl-seller"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
description = "Mirakl Marketplace API client."
license = "MIT"

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
reqwest = "0.8.2"
failure = "0.1.2"
failure_derive = "0.1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"