[package]
name = "mirakl"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
description = "Mirakl Marketplace API client."
license = "MIT"
edition = "2018"

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"